<resources>
    <string name="app_name">Rather</string>
    <string name="parse_app_id">hCnPNPNulctj8Ze7m1H7AOLxRGaohO47aqZJu41o</string>
    <string name="parse_client_key">PWPeDPvzs5upDKWdCFbe0tRbaMpFtzTm1IvyXtms</string>
    <string name="facebook_app_id">1591625341094823</string>

    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>

    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">You are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>
    
    <!--<string name="title_activity_survey_list">Surveys</string>-->
    <string name="menu_title">Surveys</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new_survey">New Survey</string>
    <string name="action_profile">My Profile</string>
    <string name="action_my_surveys">My Surveys</string>
    <string name="action_available_surveys">Available Surveys</string>
    <string name="action_respond">Respond to Survey</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="title_activity_new_survey">Create Survey</string>
    <string name="new_survey_name">Name</string>
    <string name="new_survey_privacy">Public</string>
    <string name="new_survey_password">Password</string>
    <string name="new_survey_button_label">Create Survey</string>

    <string name="title_activity_new_question">Create Question</string>
    <string name="new_question_survey_name"></string>
    <string name="new_question_content">Question</string>
    <string name="new_question_choice_1">Choice 1</string>
    <string name="new_question_choice_2">Choice 2</string>
    <string name="new_question_add_button_label">Add Question</string>
    <string name="new_question_finish_button_label">Finish</string>

    <string name="title_activity_survey_details">Survey details</string>
    <string name="survey_details_name_label">"Survey Name: "</string>
    <string name="survey_details_author_label">"Author: "</string>
    <string name="survey_details_privacy_label">"Privacy: "</string>
    <string name="survey_details_expiration_date_label">"Expiration Date: "</string>
    <string name="survey_details_published_label">"Published: "</string>
    <string name="survey_details_response_count_label">"# of Responses: "</string>
    <string name="survey_details_view_results_button">View Results</string>
    <string name="survey_no_questions">This survey has no questions</string>

    <string name="private_survey_password_message">"Enter Password: "</string>

    <string name="title_activity_response">ResponseActivity</string>
    <string name="response_set_complete">Thank you for completing the survey</string>
    <string name="response_select_answer">Please select an answer</string>
    <string name="response_text_answer">Please type an answer</string>
    <string name="response_yes_recorded">Yes</string>
    <string name="response_no_recorded">No</string>
    <string name="response_fragment">Something</string>

    <string name="title_activity_survey_results">Survey Results</string>
    <item name="choiceA_label" type="id"/>
    <item name="choiceB_label" type="id"/>

</resources>
