<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/new_survey_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_survey_name"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_survey_privacy"
        android:id="@+id/new_survey_privacy_input"
        android:layout_gravity="start"
        android:checked="true"/>

    <EditText
        android:id="@+id/new_survey_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/new_survey_password"/>

    <Button
        android:id="@+id/create_survey"
        style="@style/ParseLoginUI.Button"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:text="@string/new_survey_button_label" />

</LinearLayout>
